--- a/src/Components/FakeStore/store.css
+++ b/src/Components/FakeStore/store.css
@@ -43,11 +43,16 @@ nav{
     font-size: 20px;
 }
 
-
+nav .brand-logo.center {
+    margin-top: 1rem
+} 
 @media(max-width: 400px){ 
     .card.horizontal{
         flex-direction: column;
         align-items: baseline;
 
     }
+    nav .brand-logo.center {
+        margin-top: 0.7rem
+    } 
 }
