--- a/src/Components/FakeStore/loginStore.css
+++ b/src/Components/FakeStore/loginStore.css
@@ -29,3 +29,15 @@
     background: -webkit-linear-gradient(24deg, #649a90 0%, #7848e0 100%);
     background: linear-gradient(24deg, #649a90 0%, #7848e0 100%);
 }
+
+@media only screen and (max-width: 700px){
+    .loggin_movil{
+        display: flex;
+        flex-direction: column;
+        align-items:center;
+    }
+     #input-movil {
+        width: 100%;
+        }
+    
+}
